adding collours and margin to p tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <h2>About me</h2>
     <p>Im a 23 year old frontend student from Haugesund, Norway. I live in Bergen with my bestfriend as my roommate. In my spare time i like to hike in the mountain, play football, take pictures and gaming.
-        I also work at a bowlingalley in åsane in the weekends.
+        I also work at a bowlingalley in Åsane in the weekends.
     </p>
 </body>
 </html>
