--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <header>
         <h1>Matias Garcia Johannesen</h1>
     </header>
-    
-    <h2>About me</h2>
-    <p>Im a 23 year old frontend student from Haugesund, Norway. I live in Bergen with my bestfriend as my roommate. In my spare time i like to hike in the mountain, play football, take pictures and gaming.
-        I also work at a bowlingalley in Åsane in the weekends.
-    </p>
+    <div class="aboutBox">
+        <h2>About me</h2>
+        <p>Im a 23 year old frontend student from Haugesund, Norway. I live in Bergen with my bestfriend as my roommate. In my spare time i like to hike in the mountain, play football, take pictures and gaming.
+            I also work at a bowlingalley in Åsane in the weekends.
+        </p>
+    </div>
 
     <a href="job.html"><button>My dream job</button></a>
 </body>
