adding font and img

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <div class="aboutBox">
         <h2>About me</h2>
+        <img src="img/7885D5FF-E951-40E6-901F-A3D0ED4B1FCB_1_105_c.jpeg" alt="">
         <p>Im a 23 year old frontend student from Haugesund, Norway. I live in Bergen with my bestfriend as my roommate. In my spare time i like to hike in the mountain, play football, take pictures and gaming.
             I also work at a bowlingalley in Åsane in the weekends.
         </p>
